<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="@+id/button_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/edit_password"
        app:layout_constraintTop_toTopOf="@+id/button_sign_in"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        app:backgroundTint="@color/cardview_shadow_start_color"
        app:layout_constraintBottom_toBottomOf="@+id/button_registered"
        app:layout_constraintEnd_toEndOf="@+id/button_leave"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_leave"
        app:layout_constraintTop_toTopOf="@+id/button_registered"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/edit_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/please_enter_account"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/text_show"
        app:layout_constraintTop_toBottomOf="@+id/text_show" />

    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/sign_in"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintStart_toStartOf="@+id/text_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <TextView
        android:id="@+id/text_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/account"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_account"
        app:layout_constraintEnd_toStartOf="@+id/edit_account"
        app:layout_constraintStart_toStartOf="@+id/text_show"
        app:layout_constraintTop_toTopOf="@+id/edit_account" />

    <Button
        android:id="@+id/button_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/apply_for_an_account"
        android:textColor="@color/black"
        app:backgroundTint="@color/cardview_shadow_start_color"
        app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_password"
        app:layout_constraintEnd_toEndOf="@+id/text_account"
        app:layout_constraintStart_toStartOf="@+id/text_account"
        app:layout_constraintTop_toTopOf="@+id/edit_password" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/please_enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_account"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_account"
        app:layout_constraintTop_toBottomOf="@+id/edit_account" />

    <TextView
        android:id="@+id/text_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:text="歡迎使用POS系統"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>